ratings filter has also been adde

--- a/frontend/src/component/Product/Products.css
+++ b/frontend/src/component/Product/Products.css
@@ -92,6 +92,9 @@
   color: tomato;
 }
 
+.filterBox > fieldset {
+  border: 1px solid rgba(0, 0, 0, 0.329);
+}
 
 @media screen and (max-width: 600px) {
   .filterBox {
